--- a/README
+++ b/README
@@ -2,4 +2,5 @@
 dwm-pertag-20170513-ceac8c9.diff
 
 # st patches
-st-anysize-20180817.diff st-scrollback-0.8.diff
+st-anysize-20180817.diff
+st-scrollback-0.8.diff
